# pcc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISION.md  OPERATOR.md  SCHEMA.md  SSA_RUNBOOK.md
golden/thuliumlaser-v0.2/: GIT_SHA.txt  decision.json
pcc/: addenda.py  addenda_diff.py  bedrock.py  canonical.py  contract_eie_meglerstandard.py  contract_leie_statsbygg.py  contract_terms.py  criteria_and_formula.py  cross_refs.py  digest.py  dps.py  extract_dpa_2020.py  extract_dps.py  extract_hmn_invasive.py  extract_hso_byggc.py  extract_multilot_office.py  extract_ns8406_simple.py  extract_ns8407_admin.py  extract_ns8407_bim_mop.py  extract_ns8407_sha.py  extract_ns8407_specs.py  extract_ns8407_total.py  extract_renhold_facility.py  extract_ssa_b.py  extract_ssa_v.py  formula_detect.py  hmn_invasive.py  hso_byggc.py  ingest.py  itt.py  krav_csv.py  matrix.py  merkle.py  multilot_office.py  ns8406_simple.py  ns8407_total.py  offer_checks.py  price_check.py  price_schema.py  receipt_diff.py  (+10 more)
registry/: tender-core.tokens.json
samples/: Addendum1.txt  Bilag10.txt  ITT.txt  Kravspesifikasjon_Evaluering.csv  Kravspesifikasjon_Minstekrav.csv  Notice.txt  Offer.txt  Pricing.txt  Prisskjema_Forbruksmateriell.csv  Prisskjema_Hovedprodukt.csv  Rammeavtale.txt  Specs.txt  prices.csv
schemas/: decision.schema.json
scripts/: check_poppler.sh  ci_run.sh  golden_guard.sh  normalize_text.py  pcc_canonicalize.py  pcc_stabilize_ids.py  receipt_diff.py  run_goldens.sh
scripts/cli/: pcc_preflight.py  (+2 more)
(+44 files in other folders)
